feel-grammar/src/feel.output
Grammar

    0 $accept: feel $end

    1 feel: START_EXPRESSION expression
    2     | START_BOXED_EXPRESSION boxed_expression
    3     | START_CONTEXT context
    4     | START_TEXTUAL_EXPRESSION textual_expression
    5     | START_TEXTUAL_EXPRESSIONS textual_expressions

    6 $@1: %empty

    7 feel: START_UNARY_TESTS $@1 unary_tests
    8     | START_SIMPLE_EXPRESSION simple_expression
    9     | START_SIMPLE_EXPRESSIONS simple_expressions
   10     | START_SIMPLE_VALUE simple_value
   11     | START_RANGE_LITERAL range_literal

   12 expression: boxed_expression
   13           | textual_expression

   14 boxed_expression: list
   15                 | function_definition
   16                 | context

   17 $@2: %empty

   18 textual_expression: FOR $@2 iteration_contexts RETURN expression
   19                   | IF expression THEN expression ELSE expression

   20 $@3: %empty

   21 textual_expression: SOME $@3 quantified_expressions SATISFIES expression

   22 $@4: %empty

   23 textual_expression: EVERY $@4 quantified_expressions SATISFIES expression

   24 $@5: %empty

   25 textual_expression: expression BETWEEN $@5 expression BETWEEN_AND expression
   26                   | expression OR expression
   27                   | expression AND expression
   28                   | expression EQ expression
   29                   | expression NE expression
   30                   | expression LT expression
   31                   | expression LE expression
   32                   | expression GT expression
   33                   | expression GE expression
   34                   | expression IN LEFT_PAREN comparison_in
   35                   | expression IN expression
   36                   | expression PLUS expression
   37                   | expression MINUS expression
   38                   | expression MUL expression
   39                   | expression DIV expression
   40                   | expression EXP expression
   41                   | MINUS expression

   42 $@6: %empty

   43 textual_expression: expression INSTANCE OF $@6 type
   44                   | expression DOT NAME
   45                   | expression LEFT_BRACKET expression RIGHT_BRACKET
   46                   | expression LEFT_PAREN parameters
   47                   | literal
   48                   | simple_positive_unary_test
   49                   | NAME
   50                   | LEFT_PAREN expression RIGHT_PAREN

   51 textual_expressions: textual_expression COMMA textual_expressions
   52                    | textual_expression

   53 unary_tests: MINUS
   54            | NOT LEFT_PAREN positive_unary_tests RIGHT_PAREN
   55            | positive_unary_tests

   56 positive_unary_tests: expression COMMA positive_unary_tests
   57                     | expression

   58 comparison_in: expression COMMA positive_unary_tests RIGHT_PAREN

   59 simple_expression: expression PLUS expression
   60                  | expression MINUS expression
   61                  | expression MUL expression
   62                  | expression DIV expression
   63                  | expression EXP expression
   64                  | MINUS expression
   65                  | simple_value

   66 simple_expressions: simple_expression COMMA simple_expressions
   67                   | simple_expression

   68 simple_positive_unary_test: LT endpoint
   69                           | LE endpoint
   70                           | GT endpoint
   71                           | GE endpoint
   72                           | EQ endpoint
   73                           | NE endpoint
   74                           | interval

   75 interval: interval_start interval_end

   76 interval_start: LEFT_PAREN endpoint ELLIPSIS
   77               | RIGHT_BRACKET endpoint ELLIPSIS
   78               | LEFT_BRACKET endpoint ELLIPSIS

   79 interval_end: endpoint RIGHT_PAREN
   80             | endpoint LEFT_BRACKET
   81             | endpoint RIGHT_BRACKET

   82 endpoint: expression

   83 simple_value: qualified_name
   84             | simple_literal

   85 literal: simple_literal
   86        | NULL

   87 simple_literal: NUMERIC
   88               | STRING
   89               | BOOLEAN
   90               | AT STRING

   91 $@7: %empty

   92 simple_literal: NAME_DATE_TIME LEFT_PAREN $@7 parameters

   93 $@8: %empty

   94 context: LEFT_BRACE $@8 context_entries

   95 context_entries: RIGHT_BRACE
   96                | context_entry context_entry_tail

   97 context_entry: key COLON expression

   98 context_entry_tail: RIGHT_BRACE
   99                   | COMMA context_entry context_entry_tail

  100 key: NAME
  101    | STRING

  102 list: LEFT_BRACKET list_items

  103 list_items: RIGHT_BRACKET
  104           | expression list_tail

  105 list_tail: RIGHT_BRACKET
  106          | COMMA expression list_tail

  107 parameters: RIGHT_PAREN
  108           | named_parameters
  109           | positional_parameters

  110 named_parameters: named_parameter named_parameters_tail

  111 named_parameter: NAME COLON expression

  112 named_parameters_tail: RIGHT_PAREN
  113                      | COMMA named_parameter named_parameters_tail

  114 positional_parameters: expression positional_parameters_tail

  115 positional_parameters_tail: RIGHT_PAREN
  116                           | COMMA expression positional_parameters_tail

  117 qualified_name: NAME DOT qualified_name
  118               | NAME

  119 type: BUILT_IN_TYPE_NAME
  120     | qualified_name

  121 $@9: %empty

  122 type: LIST LT $@9 type GT

  123 $@10: %empty

  124 type: RANGE LT $@10 type GT
  125     | CONTEXT LT context_type_entries

  126 $@11: %empty

  127 type: FUNCTION LT function_type_parameters RIGHT_ARROW $@11 type

  128 context_type_entries: context_type_entry context_type_entry_tail

  129 $@12: %empty

  130 context_type_entry: NAME COLON $@12 type

  131 context_type_entry_tail: GT
  132                        | COMMA context_type_entry context_type_entry_tail

  133 function_type_parameters: GT

  134 $@13: %empty

  135 function_type_parameters: $@13 type function_type_parameters_tail

  136 function_type_parameters_tail: GT

  137 $@14: %empty

  138 function_type_parameters_tail: COMMA $@14 type function_type_parameters_tail

  139 iteration_contexts: iteration_context COMMA iteration_contexts
  140                   | iteration_context

  141 $@15: %empty

  142 $@16: %empty

  143 iteration_context: $@15 NAME $@16 IN iteration_context_value

  144 iteration_context_value: expression
  145                        | expression ELLIPSIS expression

  146 quantified_expressions: quantified_expression COMMA quantified_expressions
  147                       | quantified_expression

  148 $@17: %empty

  149 $@18: %empty

  150 quantified_expression: $@17 NAME $@18 IN expression

  151 $@19: %empty

  152 function_definition: FUNCTION LEFT_PAREN $@19 formal_parameters external

  153 formal_parameters: RIGHT_PAREN

  154 $@20: %empty

  155 formal_parameters: formal_parameter $@20 formal_parameters_tail

  156 formal_parameters_tail: RIGHT_PAREN

  157 $@21: %empty

  158 formal_parameters_tail: COMMA formal_parameter $@21 formal_parameters_tail

  159 $@22: %empty

  160 formal_parameter: NAME COLON $@22 type
  161                 | NAME

  162 external: EXTERNAL expression
  163         | expression

  164 range_literal: range_literal_start range_literal_end

  165 range_literal_start: LEFT_PAREN range_endpoint ELLIPSIS
  166                    | RIGHT_BRACKET range_endpoint ELLIPSIS
  167                    | LEFT_BRACKET range_endpoint ELLIPSIS

  168 range_literal_end: range_endpoint RIGHT_PAREN
  169                  | range_endpoint LEFT_BRACKET
  170                  | range_endpoint RIGHT_BRACKET

  171 range_endpoint: NUMERIC
  172               | STRING

  173 $@23: %empty

  174 range_endpoint: NAME_DATE_TIME LEFT_PAREN $@23 parameters


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    START_EXPRESSION (258) 1
    START_BOXED_EXPRESSION (259) 2
    START_CONTEXT (260) 3
    START_TEXTUAL_EXPRESSION (261) 4
    START_TEXTUAL_EXPRESSIONS (262) 5
    START_UNARY_TESTS (263) 7
    START_SIMPLE_EXPRESSION (264) 8
    START_SIMPLE_EXPRESSIONS (265) 9
    START_SIMPLE_VALUE (266) 10
    START_RANGE_LITERAL (267) 11
    AT (268) 90
    NOT (269) 54
    COLON (270) 97 111 130 160
    COMMA (271) 51 56 58 66 99 106 113 116 132 138 139 146 158
    EVERY (272) 23
    FOR (273) 18
    LEFT_BRACE (274) 94
    NULL (275) 86
    RIGHT_ARROW (276) 127
    OF (277) 43
    LIST (278) 122
    RANGE (279) 124
    CONTEXT (280) 125
    THEN (281) 19
    FUNCTION (282) 127 152
    EXTERNAL (283) 162
    IF (284) 19
    RIGHT_BRACE (285) 95 98
    RETURN (286) 18
    SOME (287) 21
    NUMERIC (288) 87 171
    STRING (289) 88 90 101 172
    BOOLEAN (290) 89
    SATISFIES (291) 21 23
    ELSE (292) 19
    OR (293) 26
    AND (294) 27
    EQ (295) 28 72
    NE (296) 29 73
    LT (297) 30 68 122 124 125 127
    LE (298) 31 69
    GT (299) 32 70 122 124 131 133 136
    GE (300) 33 71
    BETWEEN (301) 25
    BETWEEN_AND (302) 25
    IN (303) 34 35 143 150
    MINUS (304) 37 41 53 60 64
    PLUS (305) 36 59
    MUL (306) 38 61
    DIV (307) 39 62
    EXP (308) 40 63
    PREC_NEG (309)
    INSTANCE (310) 43
    NAME (311) 44 49 100 111 117 118 130 143 150 160 161
    NAME_DATE_TIME (312) 92 174
    BUILT_IN_TYPE_NAME (313) 119
    LEFT_PAREN (314) 34 46 50 54 76 92 152 165 174
    RIGHT_PAREN (315) 50 54 58 79 107 112 115 153 156 168
    LEFT_BRACKET (316) 45 78 80 102 167 169
    RIGHT_BRACKET (317) 45 77 81 103 105 166 170
    ELLIPSIS (318) 76 77 78 145 165 166 167
    DOT (319) 44 117


Nonterminals, with rules where they appear

    $accept (65)
        on left: 0
    feel (66)
        on left: 1 2 3 4 5 7 8 9 10 11
        on right: 0
    $@1 (67)
        on left: 6
        on right: 7
    expression (68)
        on left: 12 13
        on right: 1 18 19 21 23 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 43 44 45 46 50 56 57 58 59 60 61 62 63 64 82 97 104 106 111 114 116 144 145 150 162 163
    boxed_expression (69)
        on left: 14 15 16
        on right: 2 12
    textual_expression (70)
        on left: 18 19 21 23 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 43 44 45 46 47 48 49 50
        on right: 4 13 51 52
    $@2 (71)
        on left: 17
        on right: 18
    $@3 (72)
        on left: 20
        on right: 21
    $@4 (73)
        on left: 22
        on right: 23
    $@5 (74)
        on left: 24
        on right: 25
    $@6 (75)
        on left: 42
        on right: 43
    textual_expressions (76)
        on left: 51 52
        on right: 5 51
    unary_tests (77)
        on left: 53 54 55
        on right: 7
    positive_unary_tests (78)
        on left: 56 57
        on right: 54 55 56 58
    comparison_in (79)
        on left: 58
        on right: 34
    simple_expression (80)
        on left: 59 60 61 62 63 64 65
        on right: 8 66 67
    simple_expressions (81)
        on left: 66 67
        on right: 9 66
    simple_positive_unary_test (82)
        on left: 68 69 70 71 72 73 74
        on right: 48
    interval (83)
        on left: 75
        on right: 74
    interval_start (84)
        on left: 76 77 78
        on right: 75
    interval_end (85)
        on left: 79 80 81
        on right: 75
    endpoint (86)
        on left: 82
        on right: 68 69 70 71 72 73 76 77 78 79 80 81
    simple_value (87)
        on left: 83 84
        on right: 10 65
    literal (88)
        on left: 85 86
        on right: 47
    simple_literal (89)
        on left: 87 88 89 90 92
        on right: 84 85
    $@7 (90)
        on left: 91
        on right: 92
    context (91)
        on left: 94
        on right: 3 16
    $@8 (92)
        on left: 93
        on right: 94
    context_entries (93)
        on left: 95 96
        on right: 94
    context_entry (94)
        on left: 97
        on right: 96 99
    context_entry_tail (95)
        on left: 98 99
        on right: 96 99
    key (96)
        on left: 100 101
        on right: 97
    list (97)
        on left: 102
        on right: 14
    list_items (98)
        on left: 103 104
        on right: 102
    list_tail (99)
        on left: 105 106
        on right: 104 106
    parameters (100)
        on left: 107 108 109
        on right: 46 92 174
    named_parameters (101)
        on left: 110
        on right: 108
    named_parameter (102)
        on left: 111
        on right: 110 113
    named_parameters_tail (103)
        on left: 112 113
        on right: 110 113
    positional_parameters (104)
        on left: 114
        on right: 109
    positional_parameters_tail (105)
        on left: 115 116
        on right: 114 116
    qualified_name (106)
        on left: 117 118
        on right: 83 117 120
    type (107)
        on left: 119 120 122 124 125 127
        on right: 43 122 124 127 130 135 138 160
    $@9 (108)
        on left: 121
        on right: 122
    $@10 (109)
        on left: 123
        on right: 124
    $@11 (110)
        on left: 126
        on right: 127
    context_type_entries (111)
        on left: 128
        on right: 125
    context_type_entry (112)
        on left: 130
        on right: 128 132
    $@12 (113)
        on left: 129
        on right: 130
    context_type_entry_tail (114)
        on left: 131 132
        on right: 128 132
    function_type_parameters (115)
        on left: 133 135
        on right: 127
    $@13 (116)
        on left: 134
        on right: 135
    function_type_parameters_tail (117)
        on left: 136 138
        on right: 135 138
    $@14 (118)
        on left: 137
        on right: 138
    iteration_contexts (119)
        on left: 139 140
        on right: 18 139
    iteration_context (120)
        on left: 143
        on right: 139 140
    $@15 (121)
        on left: 141
        on right: 143
    $@16 (122)
        on left: 142
        on right: 143
    iteration_context_value (123)
        on left: 144 145
        on right: 143
    quantified_expressions (124)
        on left: 146 147
        on right: 21 23 146
    quantified_expression (125)
        on left: 150
        on right: 146 147
    $@17 (126)
        on left: 148
        on right: 150
    $@18 (127)
        on left: 149
        on right: 150
    function_definition (128)
        on left: 152
        on right: 15
    $@19 (129)
        on left: 151
        on right: 152
    formal_parameters (130)
        on left: 153 155
        on right: 152
    $@20 (131)
        on left: 154
        on right: 155
    formal_parameters_tail (132)
        on left: 156 158
        on right: 155 158
    $@21 (133)
        on left: 157
        on right: 158
    formal_parameter (134)
        on left: 160 161
        on right: 155 158
    $@22 (135)
        on left: 159
        on right: 160
    external (136)
        on left: 162 163
        on right: 152
    range_literal (137)
        on left: 164
        on right: 11
    range_literal_start (138)
        on left: 165 166 167
        on right: 164
    range_literal_end (139)
        on left: 168 169 170
        on right: 164
    range_endpoint (140)
        on left: 171 172 174
        on right: 165 166 167 168 169 170
    $@23 (141)
        on left: 173
        on right: 174


State 0

    0 $accept: . feel $end

    START_EXPRESSION           shift, and go to state 1
    START_BOXED_EXPRESSION     shift, and go to state 2
    START_CONTEXT              shift, and go to state 3
    START_TEXTUAL_EXPRESSION   shift, and go to state 4
    START_TEXTUAL_EXPRESSIONS  shift, and go to state 5
    START_UNARY_TESTS          shift, and go to state 6
    START_SIMPLE_EXPRESSION    shift, and go to state 7
    START_SIMPLE_EXPRESSIONS   shift, and go to state 8
    START_SIMPLE_VALUE         shift, and go to state 9
    START_RANGE_LITERAL        shift, and go to state 10

    feel  go to state 11


State 1

    1 feel: START_EXPRESSION . expression

    AT              shift, and go to state 12
    EVERY           shift, and go to state 13
    FOR             shift, and go to state 14
    LEFT_BRACE      shift, and go to state 15
    NULL            shift, and go to state 16
    FUNCTION        shift, and go to state 17
    IF              shift, and go to state 18
    SOME            shift, and go to state 19
    NUMERIC         shift, and go to state 20
    STRING          shift, and go to state 21
    BOOLEAN         shift, and go to state 22
    EQ              shift, and go to state 23
    NE              shift, and go to state 24
    LT              shift, and go to state 25
    LE              shift, and go to state 26
    GT              shift, and go to state 27
    GE              shift, and go to state 28
    MINUS           shift, and go to state 29
    NAME            shift, and go to state 30
    NAME_DATE_TIME  shift, and go to state 31
    LEFT_PAREN      shift, and go to state 32
    LEFT_BRACKET    shift, and go to state 33
    RIGHT_BRACKET   shift, and go to state 34

    expression                  go to state 35
    boxed_expression            go to state 36
    textual_expression          go to state 37
    simple_positive_unary_test  go to state 38
    interval                    go to state 39
    interval_start              go to state 40
    literal                     go to state 41
    simple_literal              go to state 42
    context                     go to state 43
    list                        go to state 44
    function_definition         go to state 45


State 2

    2 feel: START_BOXED_EXPRESSION . boxed_expression

    LEFT_BRACE    shift, and go to state 15
    FUNCTION      shift, and go to state 17
    LEFT_BRACKET  shift, and go to state 46

    boxed_expression     go to state 47
    context              go to state 43
    list                 go to state 44
    function_definition  go to state 45


State 3

    3 feel: START_CONTEXT . context

    LEFT_BRACE  shift, and go to state 15

    context  go to state 48


State 4

    4 feel: START_TEXTUAL_EXPRESSION . textual_expression

    AT              shift, and go to state 12
    EVERY           shift, and go to state 13
    FOR             shift, and go to state 14
    LEFT_BRACE      shift, and go to state 15
    NULL            shift, and go to state 16
    FUNCTION        shift, and go to state 17
    IF              shift, and go to state 18
    SOME            shift, and go to state 19
    NUMERIC         shift, and go to state 20
    STRING          shift, and go to state 21
    BOOLEAN         shift, and go to state 22
    EQ              shift, and go to state 23
    NE              shift, and go to state 24
    LT              shift, and go to state 25
    LE              shift, and go to state 26
    GT              shift, and go to state 27
    GE              shift, and go to state 28
    MINUS           shift, and go to state 29
    NAME            shift, and go to state 30
    NAME_DATE_TIME  shift, and go to state 31
    LEFT_PAREN      shift, and go to state 32
    LEFT_BRACKET    shift, and go to state 33
    RIGHT_BRACKET   shift, and go to state 34

    expression                  go to state 49
    boxed_expression            go to state 36
    textual_expression          go to state 50
    simple_positive_unary_test  go to state 38
    interval                    go to state 39
    interval_start              go to state 40
    literal                     go to state 41
    simple_literal              go to state 42
    context                     go to state 43
    list                        go to state 44
    function_definition         go to state 45


State 5

    5 feel: START_TEXTUAL_EXPRESSIONS . textual_expressions

    AT              shift, and go to state 12
    EVERY           shift, and go to state 13
    FOR             shift, and go to state 14
    LEFT_BRACE      shift, and go to state 15
    NULL            shift, and go to state 16
    FUNCTION        shift, and go to state 17
    IF              shift, and go to state 18
    SOME            shift, and go to state 19
    NUMERIC         shift, and go to state 20
    STRING          shift, and go to state 21
    BOOLEAN         shift, and go to state 22
    EQ              shift, and go to state 23
    NE              shift, and go to state 24
    LT              shift, and go to state 25
    LE              shift, and go to state 26
    GT              shift, and go to state 27
    GE              shift, and go to state 28
    MINUS           shift, and go to state 29
    NAME            shift, and go to state 30
    NAME_DATE_TIME  shift, and go to state 31
    LEFT_PAREN      shift, and go to state 32
    LEFT_BRACKET    shift, and go to state 33
    RIGHT_BRACKET   shift, and go to state 34

    expression                  go to state 49
    boxed_expression            go to state 36
    textual_expression          go to state 51
    textual_expressions         go to state 52
    simple_positive_unary_test  go to state 38
    interval                    go to state 39
    interval_start              go to state 40
    literal                     go to state 41
    simple_literal              go to state 42
    context                     go to state 43
    list                        go to state 44
    function_definition         go to state 45


State 6

    7 feel: START_UNARY_TESTS . $@1 unary_tests

    $default  reduce using rule 6 ($@1)

    $@1  go to state 53


State 7

    8 feel: START_SIMPLE_EXPRESSION . simple_expression

    AT              shift, and go to state 12
    EVERY           shift, and go to state 13
    FOR             shift, and go to state 14
    LEFT_BRACE      shift, and go to state 15
    NULL            shift, and go to state 16
    FUNCTION        shift, and go to state 17
    IF              shift, and go to state 18
    SOME            shift, and go to state 19
    NUMERIC         shift, and go to state 20
    STRING          shift, and go to state 21
    BOOLEAN         shift, and go to state 22
    EQ              shift, and go to state 23
    NE              shift, and go to state 24
    LT              shift, and go to state 25
    LE              shift, and go to state 26
    GT              shift, and go to state 27
    GE              shift, and go to state 28
    MINUS           shift, and go to state 54
    NAME            shift, and go to state 55
    NAME_DATE_TIME  shift, and go to state 31
    LEFT_PAREN      shift, and go to state 32
    LEFT_BRACKET    shift, and go to state 33
    RIGHT_BRACKET   shift, and go to state 34

    expression                  go to state 56
    boxed_expression            go to state 36
    textual_expression          go to state 37
    simple_expression           go to state 57
    simple_positive_unary_test  go to state 38
    interval                    go to state 39
    interval_start              go to state 40
    simple_value                go to state 58
    literal                     go to state 41
    simple_literal              go to state 59
    context                     go to state 43
    list                        go to state 44
    qualified_name              go to state 60
    function_definition         go to state 45


State 8

    9 feel: START_SIMPLE_EXPRESSIONS . simple_expressions

    AT              shift, and go to state 12
    EVERY           shift, and go to state 13
    FOR             shift, and go to state 14
    LEFT_BRACE      shift, and go to state 15
    NULL            shift, and go to state 16
    FUNCTION        shift, and go to state 17
    IF              shift, and go to state 18
    SOME            shift, and go to state 19
    NUMERIC         shift, and go to state 20
    STRING          shift, and go to state 21
    BOOLEAN         shift, and go to state 22
    EQ              shift, and go to state 23
    NE              shift, and go to state 24
    LT              shift, and go to state 25
    LE              shift, and go to state 26
    GT              shift, and go to state 27
    GE              shift, and go to state 28
    MINUS           shift, and go to state 54
    NAME            shift, and go to state 55
    NAME_DATE_TIME  shift, and go to state 31
    LEFT_PAREN      shift, and go to state 32
    LEFT_BRACKET    shift, and go to state 33
    RIGHT_BRACKET   shift, and go to state 34

    expression                  go to state 56
    boxed_expression            go to state 36
    textual_expression          go to state 37
    simple_expression           go to state 61
    simple_expressions          go to state 62
    simple_positive_unary_test  go to state 38
    interval                    go to state 39
    interval_start              go to state 40
    simple_value                go to state 58
    literal                     go to state 41
    simple_literal              go to state 59
    context                     go to state 43
    list                        go to state 44
    qualified_name              go to state 60
    function_definition         go to state 45


State 9

   10 feel: START_SIMPLE_VALUE . simple_value
